--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
             <button id="btn-update"
                 class="bg-sky-400 hover:bg-sky-500 text-white font-medium px-1.5 py-1 text-sm rounded flex mx-auto my-2 items-center">Today's
                 Date</button>
-            <h2 class="mb-4 text-rose-300 bg-rose-50 w-1/2 mx-auto rounded px-2 py-1 text-center mt-2 text-xs">
+            <h2
+                class="mb-4 font-semibold text-rose-300 bg-rose-50 w-1/2 mx-auto rounded px-2 py-1 text-center mt-2 text-xs">
                 ** Dhaka Time **
             </h2>
             <div class="bg-sky-100 w-1/2 rounded-md mx-auto mb-4">
@@ -138,10 +139,6 @@
             </p>
         </div>
     </section>
-
-
-
-
 
     <script src="app.js"></script>
     <script src="temp.js"></script>
