--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <span id="span" class="flex justify-center w-1/5 mx-auto bg-slate-200 text-slate-500 px-2 py-1 rounded-2xl my-2">
     </span>
     <div id="contain_moon" class="py-1 text-center flex flex-col justify-center items-center">
-        <div class="font-medium bg-green-200 px-2 py-1 rounded text-white text-xs">The moon today</div>
+        <div class="font-medium bg-blue-100 px-2 py-1 rounded text-green-500 text-xs">The moon today</div>
         <div style="margin-top:-7px;margin-bottom:-15px;padding:30px;filter:drop-shadow(0 0 30px #002d86)">
         </div>
         <div class="mt-16">.</div>
-        <div style="font-size:small">.</div>
+        <div class="font-small">.</div>
     </div>
     <script>
         (
@@ -51,32 +51,6 @@
         )()
     </script>
     <section>
-        <div>
-            <h3 class="text-red-500 font-medium text-center text-xs">*** Please check time from 00:00 (12:00 am) and
-                before sunset for accurate date of Ramadan ***
-            </h3>
-            <p
-                class="text-slate-600 font-medium bg-slate-50 p-3 text-xs text text-justify w-100 sm:w-100 md:w-3/4 lg:w-1/2 md:mx-auto lg:mx-auto rounded-xl">
-                The Sehri
-                and iftar
-                time is
-                based upon the
-                time provided by
-                Islamic
-                Foundation
-                Bangladesh.
-                Note that they've
-                deducted 3 mins from sehri and added 3 mins to iftar time for careful measurement. However the sunnah is
-                to
-                hasting to break the fast after sunset and not to delay it. So break your fast at the provided time
-                after
-                deducting 3
-                mins
-                <span class="text-red-500 text-xs">IF YOUR TIME IS ACCURATELY UP TO DATE THROUGH INTERNET
-                    CONNECTION.
-                </span>
-            </p>
-        </div>
         <div class="mb-4">
             <div id="btn-disabled-warning" class="text-rose-400 bg-rose-100 rounded-lg w-1/2 mx-auto p-0.5 hidden">
                 <small style="font-size: 10px;" class="text-center flex justify-center">Button is disabled from
@@ -84,7 +58,7 @@
                 </small>
                 <small style="font-size: 10px;" class="text-center flex justify-center">Please check date before iftar
                     time
-                    (before sunset) and/or after
+                    (before sunset) or after
                     00:00 (12:00
                     am)
                 </small>
@@ -92,10 +66,6 @@
             <button id="btn-update"
                 class="bg-sky-400 hover:bg-sky-500 text-white font-medium px-1.5 py-1 text-sm rounded flex mx-auto my-2 items-center">Today's
                 Date</button>
-            <h2
-                class="mb-4 font-semibold text-rose-300 bg-rose-50 w-1/2 mx-auto rounded px-2 py-1 text-center mt-2 text-xs">
-                ** Dhaka Time **
-            </h2>
             <div class="bg-sky-100 w-1/2 rounded-md mx-auto mb-4">
                 <h3 id="gregorian-date" class="text-green-500 font-semibold text-center text-sm"></h3>
                 <h3 id="hijri-date" class="text-green-500 font-semibold text-center text-sm"></h3>
@@ -106,37 +76,6 @@
             <div id="temp" class="flex justify-center items-center text-center flex-col mt-2">
 
             </div>
-        </div>
-        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 text-slate-600 gap-4 p-2 text-sm">
-            <p>"When Ramadan enters, the gates of Paradise are opened, the gates of
-                Hellfire
-                are
-                closed and the devils
-                are chained."
-            </p>
-            <p>"Every action a son of Adam does shall be multiplied—a good action by ten times its value, up to 700
-                times. Allah says: With the exception of fasting, which belongs to Me, and I reward it accordingly. For,
-                one abandons his desire and food for My sake."
-            </p>
-            <p>"There are two occasions of joy for a fasting person: one when he breaks his fast, and the other when he
-                meets his Lord, and the (bad) breath (of a fasting person) is better in the sight of Allah than the
-                fragrance of musk."
-            </p>
-            <p>"Fasting is a shield; so when one of you is fasting he should neither indulge in obscene language nor
-                should he raise his voice in anger. If someone attacks him or insults him, let him say: “I am fasting!”"
-            </p>
-            <p>"The five (daily) prayers, and from one Friday prayer to the next, and from Ramadan to Ramadan are
-                expiation for sins committed in between provided one stays away from the major sins."
-            </p>
-            <p>"Whoever observes fasts during the month of Ramadan out of sincere faith, and hoping to attain Allah's
-                rewards, then all his past sins will be forgiven."
-            </p>
-            <p>"Whoever stands (in the voluntary night prayer of) Ramadan out of faith and in hope of reward, his
-                previous sins will be forgiven."
-            </p>
-            <p>"Anyone who fasts for one day for Allah's sake, Allah will keep his face away from the Hellfire for (a
-                distance covered by a journey of) seventy years."
-            </p>
         </div>
     </section>
 
