--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
             </div>
             <button id="btn-update"
                 class="bg-sky-400 hover:bg-sky-500 text-white font-medium px-1.5 py-1 text-sm rounded flex mx-auto my-2 items-center">Today's
-                Date</button>
-            <div class="bg-sky-100 w-1/2 rounded-md mx-auto mb-4">
-                <h3 id="gregorian-date" class="text-green-500 font-semibold text-center text-sm"></h3>
-                <h3 id="hijri-date" class="text-green-500 font-semibold text-center text-sm"></h3>
+                Date of Dhaka</button>
+            <div class="bg-sky-100 w-2/3 rounded-md mx-auto mb-4">
+                <h3 id="gregorian-date" class="text-green-500 text-center text-sm"></h3>
+                <h3 id="hijri-date" class="text-green-500 text-center text-sm"></h3>
             </div>
             <div id="iftar-sehri">
 
