added salah time

--- a/index.html
+++ b/index.html
@@ -76,11 +76,15 @@
             <div id="temp" class="flex justify-center items-center text-center flex-col mt-2">
 
             </div>
+            <div id="salah-time">
+
+            </div>
         </div>
     </section>
 
     <script src="app.js"></script>
     <script src="temp.js"></script>
+    <script src="salah.js"></script>
 </body>
 
 </html>
