--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="bg-slate-100 p-4">
-    <i class="fa-solid fa-mosque flex justify-center hover:cursor-pointer text-sky-200 text-xl"></i>
+    <i class="fa-solid fa-mosque flex justify-center hover:cursor-pointer text-sky-200 text-mds">Dhaka</i>
     <span id="span" class="flex justify-center w-1/5 mx-auto bg-slate-200 text-slate-500 px-2 py-1 rounded-2xl my-2">
     </span>
     <div id="contain_moon" class="py-1 text-center flex flex-col justify-center items-center">
@@ -76,7 +76,7 @@
             <div id="temp" class="flex justify-center items-center text-center flex-col mt-2">
 
             </div>
-            <div id="salah-time">
+            <div class="mt-2" id="salah-time">
 
             </div>
         </div>
