--- a/index.html
+++ b/index.html
@@ -76,8 +76,11 @@
             <div id="temp" class="flex justify-center items-center text-center flex-col mt-2">
 
             </div>
-            <div class="mt-2" id="salah-time">
+            <div id="salah-time" class="my-2">
 
+            </div>
+            <div id="names-container"
+                class="container mx-auto grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 xl:grid-cols-6 gap-2">
             </div>
         </div>
     </section>
@@ -85,6 +88,7 @@
     <script src="app.js"></script>
     <script src="temp.js"></script>
     <script src="salah.js"></script>
+    <script src="99names.js"></script>
 </body>
 
 </html>
