--- a/index.html
+++ b/index.html
@@ -79,8 +79,13 @@
             <div id="salah-time" class="my-2">
 
             </div>
-            <div id="names-container"
-                class="container mx-auto grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 xl:grid-cols-6 gap-2">
+            <div>
+                <h1 class="font-medium bg-blue-100 px-2 py-1 rounded text-green-500 text-xs text-center mb-2">99 Names
+                    of
+                    Allah</h1>
+                <div id="names-container"
+                    class="container mx-auto grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 xl:grid-cols-6 gap-2">
+                </div>
             </div>
         </div>
     </section>
