--- a/index.html
+++ b/index.html
@@ -90,6 +90,17 @@
         </div>
     </section>
 
+    <footer class="bg-sky-950 p-2 text-white text-center">
+        <p>
+            <small>
+                Made with
+                <i class="fa-solid fa-heart text-red-500"></i>
+                by
+                <a target="_blank" class="underline text-blue-500" href="https://www.github.com/MdMahfujHasan">Munna</a>
+            </small>
+        </p>
+    </footer>
+
     <script src="app.js"></script>
     <script src="temp.js"></script>
     <script src="salah.js"></script>
