--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@
                     am)
                 </small>
             </div>
-            <div class="bg-sky-100 rounded mx-auto mb-4">
-                <h3 id="date" class="text-green-500 text-center text-sm"></h3>
+            <div class="rounded mb-4">
+                <h3 id="date" class="text-green-500 text-center text-sm">
+
+                </h3>
             </div>
             <div id="temp" class="flex justify-center items-center text-center flex-col mt-2">
 
