--- a/index.html
+++ b/index.html
@@ -64,9 +64,8 @@
                 </small>
             </div>
             <div class="rounded mb-4">
-                <h3 id="date" class="text-green-500 text-center text-sm">
-
-                </h3>
+                <p id="warning-text" class="text-red-400 mb-1 text-center text-xs"></p>
+                <h3 id="date" class="text-green-500 text-center text-sm"></h3>
             </div>
             <div id="temp" class="flex justify-center items-center text-center flex-col mt-2">
 
