--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Ramadan Date</title>
 </head>
 
-<body class="bg-slate-100 p-4">
+<body class="bg-sky-50 p-4">
     <i class="fa-solid fa-mosque flex justify-center hover:cursor-pointer text-sky-200 text-mds">Dhaka</i>
     <span id="span" class="flex justify-center w-1/5 mx-auto bg-slate-200 text-slate-500 px-2 py-1 rounded-2xl my-2">
     </span>
@@ -68,7 +68,7 @@
                 <p id="warning-text-2" class="text-red-400 mb-1 text-center text-xs"></p>
                 <h3 id="date" class="text-green-500 text-center text-sm"></h3>
             </div>
-            <div id="temp" class="flex justify-center items-center text-center flex-col mt-2">
+            <div id="temp" class="flex justify-center items-center text-center flex-col">
 
             </div>
             <div id="salah-time" class="my-2">
